// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test render prop. Should not break if scrolling by an unknown ID 1`] = `
Object {
  "id": "foo",
  "scrollLeft": 0,
  "scrollTop": 0,
}
`;

exports[`Test render prop. Should render nothing on undefined. 1`] = `<div />`;

exports[`Test render prop. Should render the functional children. 1`] = `
<div>
  <div>
    test
  </div>
</div>
`;

exports[`Test render prop. Should scroll by ID 1`] = `
Object {
  "id": "foo",
  "scrollLeft": 100,
  "scrollTop": 200,
}
`;

exports[`Test render prop. Should scroll by ref when provided 1`] = `
<div>
  test
</div>
`;

exports[`Test render prop. Should update scroll position of ScrollArea's if present, rather than window 1`] = `
Object {
  "scrollLeft": 100,
  "scrollTop": 200,
}
`;
